# tritter

./: .clauderc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API_CONVENTIONS.md  ARCHITECTURE_DECISION.md  CLAUDE.md  DEVELOPMENT_STANDARDS.md  PR_DESCRIPTION.md  README.md  SECURITY_UPDATES.md  conftest.py  project-plan.md  pyproject.toml
.claude/: settings.json
.claude/commands/: arch.md  lint.md  standards.md  test.md  typecheck.md  validate.md
.github/: README.md  README_CI_USAGE.md  ci-config.yml  copilot-instructions.md
.github/hooks/: pre-commit.sh  prompt-submit.sh  session-start.sh
.github/scripts/: detect-branch-strictness.sh  run-ci.sh  security-scan-wrapper.sh
.github/workflows/: progressive-ci.yml
benchmarks/: .gitkeep
benchmarks/gpt2_benchmark_20260130_233954/: results.json
crates/: Cargo.toml  README.md
crates/mcp-tritter-server/: Cargo.toml
crates/mcp-tritter-server/src/: main.rs
crates/tr-tools/: Cargo.toml
crates/tr-tools/src/: lib.rs
crates/tritter-accel/: Cargo.toml
crates/tritter-accel/src/: lib.rs
data/: .gitignore  README.md  curated_repos.json
devtools/: README.md  __init__.py  __main__.py  debug_tools.py  doc_sync_validator.py  import_validator.py  project_info.py  validate.py
devtools/agents/: __init__.py  orchestrator.py  router.py
docs/: API_CONVENTIONS.md  CLAUDE_CODE_GUIDE.md  CONTRIBUTING.md  CUDA_SETUP.md  DEVELOPMENT_STANDARDS.md  ISSUE_58_RESEARCH_SUMMARY.md  README.md  REMAINING_WORK_PLAN.md  ROADMAP.md  TRAINING_STRATEGY.md  TRITON_EXTRACTION_PLAN.md  TRITON_INDEX.md  TRITON_QUICK_REFERENCE.md  clean-datasets.md  considerations.md  embedding-prediction-position-analysis.md  tritter-attention-implementation-plan.md
docs/adr/: 001-sequence-position-vs-token-semantics.md  002-progressive-layer-loading.md  003-progressive-model-training.md  004-blackwell-gpu-support.md  README.md
docs/architecture/: ROADMAP.md
docs/development/: CONTRIBUTING.md
docs/getting-started/: HARDWARE_REQUIREMENTS.md
docs/guides/: GUIDE-001-flexattention-implementation.md
docs/legacy/: tritter-comprehensive-implementation-plan.md
docs/specs/: SPEC-001-flexattention.md  SPEC-002-attention-modes.md  SPEC-003-embedding-prediction.md  SPEC-004-test-strategy.md  SPEC-005-memory-optimization.md  SPEC-006-progressive-layer-loading.md  SPEC-007-dataset-quality-gates.md  SPEC-008-progressive-model-training.md  SPEC-009-packed-ternary-inference.md  SPEC-010-lora-finetuning.md  SPEC-011-progressive-checkpoint-format.md  SPEC-012-rust-acceleration.md
docs/training/: clean-datasets.md
docs/training/triton/: TRITON_KERNEL_CURATION.md
examples/: ast_tokenization_demo.py  basic_usage.py
huggingface/: README.md  __init__.py  config.json  generation_config.json
scripts/: README.md  benchmark_hybrid_vs_full.py  benchmark_packed.py  benchmark_public_model.py  curate_datasets.py  hardware_profile.py  hybrid_gradient_predictor.py  prepare_pretrain_data.py  quality_analyzer.py  rtx5080_feasibility.py  run-checks-local.sh  security_scanner.py  show_model_specs.py  train_hybrid_production.py  train_hybrid_production_v2.py  train_hybrid_rs_compatible.py  train_pretrain.py  upload_to_huggingface.py  validate_bitnet_weights.py  verify_128k_context.py
scripts/install/: README.md  install-dev-debian.sh  install-minimal.sh
scripts/triton_extraction/: __init__.py  extract_kernels.py
src/tritter/: __init__.py
src/tritter/accel/: __init__.py
src/tritter/agents/: __init__.py  orchestrator.py  router.py
src/tritter/audio/: __init__.py  encodec.py
src/tritter/checkpoints/: __init__.py  formats.py  offload.py  progressive.py
src/tritter/core/: __init__.py  config.py  model_specs.py
src/tritter/curation/: __init__.py  dedup.py  pipeline.py  quality.py  schema.py  secrets.py  security.py
src/tritter/embedding/: __init__.py  base.py  hyperdimensional.py  knn_rounding.py  rounding.py  vq_rounding.py
src/tritter/inference/: __init__.py  kv_cache.py  layer_streaming.py  memory_manager.py  transfer_engine.py
src/tritter/models/: __init__.py  architecture.py  attention_patterns.py  flex_attention.py  multimodal_embedding.py
src/tritter/quantization/: __init__.py  bitnet.py  packed_ternary.py
src/tritter/tokenization/: __init__.py  ast_tokenizer.py  multimodal.py
src/tritter/training/: __init__.py  data.py  lora.py  trainer.py
src/tritter/training/optimization/: __init__.py  phase_trainer.py  vsa_utils.py
src/tritter/utils/: __init__.py  device_utils.py  hardware_profiles.py  memory_utils.py  profile_naming.py
src/tritter/vision/: __init__.py  siglip.py  vqvae.py
tests/: conftest.py
tests/integration/: test_lora_training.py  test_packed_inference.py
tests/unit/: test_audio.py  test_checkpoints.py  test_config.py  test_curation.py  test_embedding_rounding.py  test_flex_attention.py  test_kv_cache.py  test_layer_loader.py  test_lora.py  test_memory_manager.py  test_model.py  test_model_specs.py  test_multimodal_embedding.py  test_packed_ternary.py  test_quantization.py  test_tokenization.py  test_trainer.py  test_training_data.py  test_training_optimization.py  test_transfer_engine.py  test_triton_extraction.py  test_vision.py  test_vqvae.py
tests/unit/devtools/: __init__.py  test_import_validator.py  test_project_info.py  test_validate.py
