[package]
name = "mcp-tritter-server"
version = "0.2.0"
edition = "2021"
description = "MCP server exposing Tritter tools to Claude Code"
license = "MIT"
repository = "https://github.com/tzervas/tritter"

[[bin]]
name = "mcp-tritter-server"
path = "src/main.rs"

[dependencies]
# MCP protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
