[package]
name = "tr-tools"
version = "0.2.0"
edition = "2021"
description = "CLI tools for Tritter - config generation, memory estimation, and curation"
license = "MIT"
repository = "https://github.com/tzervas/tritter"
keywords = ["tritter", "cli", "config", "memory", "ai"]

[[bin]]
name = "tr-config"
path = "src/bin/tr-config.rs"

[[bin]]
name = "tr-memory"
path = "src/bin/tr-memory.rs"

[[bin]]
name = "tr-profile"
path = "src/bin/tr-profile.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Output formatting
colored = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
