[package]
name = "tritter-accel"
version = "0.2.1"
edition = "2021"
description = "Rust acceleration for Tritter - BitNet quantization, VSA ops, and ternary matmul"
license = "MIT"
repository = "https://github.com/tzervas/tritter"
keywords = ["bitnet", "quantization", "vsa", "ternary", "ai"]
categories = ["science", "mathematics"]

[lib]
name = "tritter_accel"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core rust-ai ecosystem from crates.io (github.com/tzervas)
rust-ai-core.workspace = true
aphelion-core = { workspace = true, optional = true }
bitnet-quantize.workspace = true
trit-vsa.workspace = true
vsa-optim-rs.workspace = true

# PyO3 for Python bindings
pyo3.workspace = true
numpy.workspace = true

# Tensor operations
ndarray.workspace = true

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
cuda = ["rust-ai-core/cuda", "bitnet-quantize/cuda"]
aphelion = ["aphelion-core"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
